# wav_decoder

./: CMakeLists.txt  Readme.markdown
src/: wave_parser.c  wave_parser.h
